# Checker-Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CS4613 Checker/CS4613 Checker/: main.cpp
CS4613 Checker/CS4613 Checker.xcodeproj/: project.pbxproj
CS4613 Checker/CS4613 Checker.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CS4613 Checker/CS4613 Checker.xcodeproj/project.xcworkspace/xcuserdata/luoyuxi.xcuserdatad/: UserInterfaceState.xcuserstate
CS4613 Checker/CS4613 Checker.xcodeproj/xcuserdata/luoyuxi.xcuserdatad/xcschemes/: xcschememanagement.plist
cmake/: FindSDL2.cmake
src/: includes.h  main.cpp
src/asset/: sprites.xml
src/asset/archive/: sprites.xml
src/asset/shader/: fragment.glsl  vertex.glsl
src/intern/: AvaMoves.cpp  Board.cpp  Checker.cpp  GameState.cpp  HumanMoves.cpp  Matrix.cpp  Move.cpp  Object.cpp  Result.cpp  Search.cpp  ShaderProgram.cpp  Text.cpp  XMLLoad.cpp  setUp.cpp  test.cpp
